k8s/base/dashboard/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamecloud-dashboard
  labels:
    app: gamecloud-dashboard
  annotations:
    cloud.yandex.com/load-balancer-type: "internal"
    cloud.yandex.com/monitored: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: gamecloud-dashboard
